Add Teacher Student People Class and VirtualMethod

--- a/FunctionTest.vcxproj.filters
+++ b/FunctionTest.vcxproj.filters
@@ -21,12 +21,30 @@
     <ClInclude Include="MainFunction.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Student.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="People.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Teacher.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FirstClass.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MainFunction.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Student.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="People.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Teacher.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
