--- a/FunctionTest.vcxproj
+++ b/FunctionTest.vcxproj
@@ -76,10 +76,16 @@
   <ItemGroup>
     <ClInclude Include="FirstClass.h" />
     <ClInclude Include="MainFunction.h" />
+    <ClInclude Include="People.h" />
+    <ClInclude Include="Student.h" />
+    <ClInclude Include="Teacher.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FirstClass.cpp" />
     <ClCompile Include="MainFunction.cpp" />
+    <ClCompile Include="People.cpp" />
+    <ClCompile Include="Student.cpp" />
+    <ClCompile Include="Teacher.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
